
  Ref #5392


* The ``set_option`` method of ``BaseChecker`` has been deprecated. You can use ``checker.linter.set_option``
  to set an option on the global configuration object instead of a checker-specific object.

  Ref #5392

* The ``config`` attribute of ``PyLinter`` is now of the ``argparse.Namespace`` type instead of
  ``optparse.Values``.

  Ref #5392

* ``UnsupportedAction`` has been deprecated.

  Ref #5392

* ``OptionsManagerMixIn`` has been deprecated.

  Ref #5392

* ``OptionParser`` has been deprecated.

  Ref #5392

* ``Option`` has been deprecated.

  Ref #5392

* ``OptionsProviderMixIn`` has been deprecated.

  Ref #5392

* ``ConfigurationMixIn`` has been deprecated.

  Ref #5392

* ``get_global_config`` has been deprecated. You can now access all global options from
  ``checker.linter.config``.

  Ref #5392

* ``OptionsManagerMixIn`` has been replaced with ``ArgumentsManager``. ``ArgumentsManager`` is considered
  private API and most methods that were public on ``OptionsManagerMixIn`` have now been deprecated and will
  be removed in a future release.

  Ref #5392

* ``OptionsProviderMixIn`` has been replaced with ``ArgumentsProvider``. ``ArgumentsProvider`` is considered
  private API and most methods that were public on ``OptionsProviderMixIn`` have now been deprecated and will
  be removed in a future release.

  Ref #5392

* ``invalid-enum-extension``: Used when a class tries to extend an inherited Enum class.

  Closes #5501

* Added the ``unrecognized-option`` message. Raised if we encounter any unrecognized options.

  Closes #5259

* Added new checker ``typevar-double-variance``: The "covariant" and "contravariant" keyword arguments
  cannot both be set to "True" in a TypeVar.

  Closes #5895

* Re-enable checker ``bad-docstring-quotes`` for Python <= 3.7.

  Closes #6087

* Exclude dunder calls on super() from raising ``unnecessary-dunder-call``.

  Closes #6074

* Removed the broken ``generate-man`` option.

  Closes #5283