@@ -11,7 +11,6 @@ from typing import TYPE_CHECKING, Any
 
 from astroid import nodes
 
-from pylint.checkers.mapreduce_checker import MapReduceMixin
 from pylint.config.arguments_provider import _ArgumentsProvider
 from pylint.constants import _MSG_ORDER, MAIN_CHECKER_NAME, WarningScope
 from pylint.exceptions import InvalidMessageError
@@ -25,7 +24,7 @@ if TYPE_CHECKING:
 
 
 @functools.total_ordering
-class BaseChecker(_ArgumentsProvider, MapReduceMixin):
+class BaseChecker(_ArgumentsProvider):
 
     # checker name (you may reuse an existing one)
     name: str = ""
@@ -207,9 +206,11 @@ class BaseChecker(_ArgumentsProvider, MapReduceMixin):
     def close(self):
         """Called after visiting project (i.e set of modules)."""
 
+    # pylint: disable-next=no-self-use
     def get_map_data(self) -> Any:
         return None
 
+    # pylint: disable-next=no-self-use, unused-argument
     def reduce_map_data(self, linter: PyLinter, data: list[Any]) -> None:
         return None
 
