@@ -63,6 +63,12 @@ Release date: TBA
 
   Ref #5392
 
+* ``MapReduceMixin`` has been deprecated. ``BaseChecker`` now implements ``get_map_data`` and
+  ``reduce_map_data``. If a checker actually needs to reduce data it should define ``get_map_data``
+  as returning something different than ``None`` and let its ``reduce_map_data`` handle a list
+  of the type returned by ``get_map_data``.
+  An example can be seen by looking at ``pylint/checkers/similar.py``.
+
 * ``UnsupportedAction`` has been deprecated.
 
   Ref #5392
